2003-04-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in, NEWS: Bump version to 1.7.4.

	* lib/texinfo.tex: New upstream version.

2003-04-19  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/389:
	* automake.in (handle_configure): Don't put $colon_infile in
	CONFIG-MAKEFILE.
	* tests/conff.test: New file.
	* tests/Makefile.am (TESTS): Add conff.test.
	Reported by Alexander Turbov.

2003-04-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.3c.

	* tests/defs.in: Handle required=etags to work around
	Exuberant Ctags.

	* configure.in: Bump version to 1.7.3b.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	* tests/dejagnu3.test, tests/dejagnu4.test, tests/dejagnu5.test:
	Distribute dejagnu test cases, so that distcheck actually runs them.

2003-04-18  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/am/dejagnu.am (site.exp): Don't define tool in site.exp,
	because we set that by invoking runtest with --tool.
	* tests/Makefile.am (TESTS): Add dejagnu4.test, dejagnu5.test,
	dejagnu6.test, dejagnu7.test.
	* tests/dejagnu4.test: New test.
	* tests/dejagnu5.test: New test.
	* tests/dejagnu6.test: New test.
	* tests/dejagnu7.test: New test.

	* tests/dejagnu3.test: Make sure the DejaGnu test is actually run.

2003-04-18  Jim Meyering  <jim@meyering.net>

	* automake.in (variable_output): Fix typo in comment s/is/if/.

2003-04-17  Jim Meyering  <jim@meyering.net>

	* lib/am/yacc.am (?GENERIC?%EXT%%DERIVED-EXT% aka .y.c): Don't redirect
	directly to $@.  Instead, redirect to $@t and rename upon success.
	Also, move the commands that update $@ so they are last.  Otherwise,
	this rule could leave the user with an up to date target (.c file)
	but with a missing or corrupted corresponding .h file.
	Add (C) and `2002' to Copyright line, at Alexandre's request.

2003-04-17  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* tests/defs.in: Handle required=runtest, to detect runtest
	from DejaGnu.