@@ -1,4 +1,4 @@
 @set UPDATED 10 April 2003
 @set UPDATED-MONTH April 2003
-@set EDITION 1.7.4
-@set VERSION 1.7.4
+@set EDITION 1.7.4a
+@set VERSION 1.7.4a
