@@ -1,5 +1,7 @@
 2003-04-23  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in: Bump version to 1.7.4a.
+
 	* configure.in, NEWS: Bump version to 1.7.4.
 
 	* lib/texinfo.tex: New upstream version.
